[UDisks] Only ignore non-user backing file if it is known

Only loop devices have this property, otherwise we end up ignoring regular disks as well.

BUG: 389358