src/solid/devices/backends/udisks2/udisksstoragevolume.cpp
@@ -104,5 +104,5 @@ bool StorageVolume::isIgnored() const
     }
 
     const QString backingFile = m_device->prop("BackingFile").toString();
-    return backingFile.isEmpty() || !backingFile.startsWith(QDir::homePath());
+    return !backingFile.isEmpty() && !backingFile.startsWith(QDir::homePath());
 }
